--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,5 @@
 /* Start Global Rules */
 
-/* Start Variables */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -41,61 +40,7 @@ body {
   padding-right: 5rem;
 }
 
-/* End Variables */
-
-/* Start spinner wrapper */
-
-.spinner-wrapper {
-  width: 100%;
-  height: 100%;
-  background-color: #eee;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.spinner {
-  position: relative;
-  width: 8rem;
-  height: 8rem;
-  border-radius: 50%;
-}
-
-.spinner::before,
-.spinner:after {
-  content: "";
-  position: absolute;
-  border-radius: 50%;
-}
-
-.spinner:before {
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(90deg, #020024, #0b5394, #00d4ff);
-  animation: spin .5s infinite linear;
-}
-
-.spinner:after {
-  width: 90%;
-  height: 90%;
-  background-color: #eee;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-
-}
-
-/* End spinner wrapper */
+/* End Global Rules */
 
 /* Start Header */
 
@@ -192,13 +137,13 @@ section {
   border: 1rem solid var(--main-color);
 }
 
-.home .content h3 {
+.home .content h1 {
   color: var(--sec-color);
-  font-size: 4rem;
+  font-size: 3rem;
   text-transform: uppercase;
 }
 
-.home .content h3 span {
+.home .content h1 span {
   color: var(--main-color);
   text-transform: uppercase;
 
@@ -239,10 +184,10 @@ section {
 }
 
 .about .row .img img {
-  width: 30rem;
-  height: 30rem;
-  border-radius: 50%;
-  border: 1rem solid #fff;
+  width: 35rem;
+  aspect-ratio: 428 × 241;
+  border-radius: .4rem;
+  border: 1rem solid var(--main-color);
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 }
 
@@ -250,12 +195,12 @@ section {
   flex: 1 1 55rem;
 }
 
-.about .row .content h3 {
+.about .row .content h2 {
   color: var(--sec-color);
   font-size: 4rem;
 }
 
-.about .row .content h3 span {
+.about .row .content h2 span {
   color: var(--main-color);
 }
 
@@ -299,13 +244,13 @@ section {
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
 }
 
-.card h2 {
+.card h1 {
   text-transform: uppercase;
   text-align: center;
   font-size: 3rem;
 }
 
-.card h2 span {
+.card h1 span {
   color: var(--main-color);
 }
 
@@ -383,6 +328,12 @@ section {
   color: var(--main-color);
   font-size: 5rem;
   padding: 1rem 0;
+}
+
+.services .box-container .box h2 {
+  color: var(--sec-color);
+  font-size: 2.2rem;
+  padding-top: 1rem;
 }
 
 .services .box-container .box h3 {
@@ -463,9 +414,9 @@ section {
   object-fit: cover;
 }
 
-.blogs .box-container .box h3 {
+.blogs .box-container .box h2 {
   color: var(--main-color);
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   padding: .5rem 0;
 }
 
@@ -490,7 +441,8 @@ section {
 }
 
 .contact .row .img img {
-  max-width: 100%;
+  width: 100%;
+  aspect-ratio: 170 × 96;
 }
 
 .contact .row form {
@@ -556,7 +508,7 @@ footer {
   flex-direction: column;
 }
 
-.footer-content h3 {
+.footer-content h1 {
   font-size: 1.8rem;
   font-weight: 400;
   text-transform: capitalize;
@@ -613,7 +565,7 @@ footer {
 .footer-bottom span {
   color: #ffffff;
   text-transform: uppercase;
-  opacity: .4;
+  font-size: 1.5rem;
   font-weight: 200;
 }
 
